--- a/src/main/resources/templates/course/online_course.html
+++ b/src/main/resources/templates/course/online_course.html
@@ -93,31 +93,19 @@
               <form role="form">
                 <div class="card-body">
                   <div class="form-group row">
-                    <div class="col-4">
+                    <div class="col-6">
                       <label>在线课程类型</label>
                       <div class="form-group">
                         <!--<label>Select</label>-->
                         <select class="form-control">
-                          <option>国际标准</option>
-                          <option>国内标准</option>
-                          <option>行业标准</option>
-                          <option>团体标准</option>
-                          <option>企业标准</option>
+                          <option>标准解读</option>
+                          <option>维护教程</option>
+                          <option>维修教程</option>
                         </select>
                       </div>
                     </div>
-                    <div class="col-4">
-                      <label>在线课程对象</label>
-                      <div class="form-group">
-                        <!--<label>Select</label>-->
-                        <select class="form-control">
-                          <option>放映机标准</option>
-                          <option>影院标准</option>
-                          <option>影厅标准</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-4">
+
+                    <div class="col-6">
                       <label>在线课程名称：</label>
                       <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：电影院星级的划分与评定/GY/T 248-2011">
                     </div>
