--- a/src/main/resources/templates/base/parts/search.html
+++ b/src/main/resources/templates/base/parts/search.html
@@ -90,13 +90,13 @@
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form role="form" action="/base/equipment/show">
+            <form role="form" action="/base/parts/show">
               <div class="card-body">
                 <div class="form-group">
                   <div class="row">
                     <div class="col-3 float-lg-left">
                       <div class="form-group">
-                        <label>配件所在设备类型：</label>
+                        <label>所在设备类型：</label>
                         <select class="form-control" name="type">
                           <option>放映机</option>
                           <option>音响</option>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="col-3 float-lg-right">
                       <div class="form-group">
-                        <label>配件品牌：</label>
+                        <label>品牌：</label>
                         <select class="form-control" name="brand">
                           <option>可视</option>
                           <option>巴克</option>
@@ -120,7 +120,7 @@
                       </div>
                     </div>
                     <div class="form-group col-3 float-lg-left">
-                      <label>配件型号：</label>
+                      <label>型号：</label>
                       <select class="form-control" name="brand">
                         <option>CLP 系列</option>
                         <option>SLP 系列</option>
@@ -131,7 +131,7 @@
                       </select>
                     </div>
                     <div class="form-group col-3 float-lg-right">
-                      <label>配件序列号：</label>
+                      <label>序列号：</label>
                       <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
                     </div>
                   </div>
@@ -162,12 +162,12 @@
             <table id="example1" class="table table-bordered table-striped">
               <thead>
               <tr>
-                <th>设备ID</th>
-                <th>设备类型</th>
-                <th>设备品牌</th>
-                <th>设备型号</th>
-                <th>设备序列号</th>
-                <th>预留字段</th>
+                <th>ID</th>
+                <th>类型</th>
+                <th>所在设备</th>
+                <th>品牌</th>
+                <th>型号</th>
+                <th>序列号</th>
                 <th>预留字段</th>
                 <th>详情</th>
               </tr>
@@ -186,40 +186,40 @@
               <tr>
                 <td >23892</td>
                 <td >音响</td>
+                <td >功放</td>
                 <td >HAEMAN</td>
                 <td >测试</td>
                 <td >14-00-00-08-38-95</td>
-                <td >-</td>
                 <td >-</td>
                 <th><a href="/details">详情</a></th>
               </tr>
               <tr>
                 <td >23543</td>
                 <td >内存条</td>
+                <td >服务器</td>
                 <td >金士顿</td>
                 <td >9400</td>
                 <td >14-00-00-08-38-95</td>
-                <td >-</td>
                 <td >-</td>
                 <th><a href="/details">详情</a></th>
               </tr>
               <tr>
                 <td >23892</td>
                 <td >显卡</td>
+                <td >服务器</td>
                 <td >华为</td>
                 <td >87999</td>
                 <td >14-00-00-08-38-95</td>
-                <td >-</td>
                 <td >-</td>
                 <th><a href="/details">详情</a></th>
               </tr>
               <tr>
                 <td >23356</td>
                 <td >硬盘</td>
+                <td >服务器</td>
                 <td >惠普</td>
                 <td >87000</td>
                 <td >14-00-00-08-38-95</td>
-                <td >-</td>
                 <td >-</td>
                 <th><a href="/details">详情</a></th>
               </tr>
