--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -161,12 +161,15 @@
                         <div class="card">
                             <div class="card-header no-border">
                                 <div class="d-flex justify-content-between">
-                                    <h3 class="card-title">影院数量统计</h3>
-                                    <a href="javascript:void(0);"></a>
+                                    <div class="form-group">
+                                        &nbsp;
+                                        <p></p>
+                                    </div>
+                                    <h3 class="card-title"></h3>
                                 </div>
                             </div>
                             <div class="card-body">
-                                <div id="main" style="height: 400px"></div>
+                                <div id="main" style="height: 25rem"></div>
                             </div>
                         </div>
                         <!-- /.card -->
@@ -174,13 +177,22 @@
                             <div class="card-header no-border">
                                 <div class="d-flex justify-content-between">
                                     <div class="form-group">
-                                        <select class="form-control">
-                                            <option>放映厅 1</option>
-                                            <option>放映厅 2</option>
-                                            <option>放映厅 3</option>
-                                            <option>放映厅 4</option>
-                                            <option>放映厅 5</option>
-                                        </select>
+                                        <div class="row">
+                                            <select class="form-control col-sm-6">
+                                                <option>大地影院</option>
+                                                <option>保利影城</option>
+                                                <option>万达影城</option>
+                                                <option>劲松电影院</option>
+                                                <option>十里河影院</option>
+                                            </select>
+                                            <select class="form-control col-sm-6">
+                                                <option>放映厅 1</option>
+                                                <option>放映厅 2</option>
+                                                <option>放映厅 3</option>
+                                                <option>放映厅 4</option>
+                                                <option>放映厅 5</option>
+                                            </select>
+                                        </div>
                                     </div>
                                     <h3 class="card-title">入座人数统计</h3>
                                     <a href="javascript:void(0);"></a>
@@ -225,12 +237,40 @@
                                 <div class="d-flex justify-content-between">
                                     <div class="form-group">
                                         <select class="form-control">
-                                            <option>放映厅 1</option>
-                                            <option>放映厅 2</option>
-                                            <option>放映厅 3</option>
-                                            <option>放映厅 4</option>
-                                            <option>放映厅 5</option>
+                                            <option>放映机</option>
+                                            <option>音响</option>
+                                            <option>功放</option>
+                                            <option>服务器</option>
+                                            <option>3D系统</option>
                                         </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <div id="piechart" style="height: 25rem"></div>
+                            </div>
+                        </div>
+                        <!-- /.card -->
+                        <div class="card">
+                            <div class="card-header no-border">
+                                <div class="d-flex justify-content-between">
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <select class="form-control col-sm-6">
+                                                <option>大地影院</option>
+                                                <option>保利影城</option>
+                                                <option>万达影城</option>
+                                                <option>劲松电影院</option>
+                                                <option>十里河影院</option>
+                                            </select>
+                                            <select class="form-control col-sm-6">
+                                                <option>放映厅 1</option>
+                                                <option>放映厅 2</option>
+                                                <option>放映厅 3</option>
+                                                <option>放映厅 4</option>
+                                                <option>放映厅 5</option>
+                                            </select>
+                                        </div>
                                     </div>
                                     <h3 class="card-title">一周温湿度变化</h3>
                                     <a href="javascript:void(0);"></a>
@@ -280,27 +320,27 @@
                                 <!--                            <div class="card-header d-flex p-0">-->
                                 <div class="d-flex justify-content-between">
                                     <div class="form-group">
-                                        <select class="form-control">
-                                            <option>放映厅 1</option>
-                                            <option>放映厅 2</option>
-                                            <option>放映厅 3</option>
-                                            <option>放映厅 4</option>
-                                            <option>放映厅 5</option>
-                                        </select>
+                                        <div class="row">
+                                            <select class="form-control col-sm-6">
+                                                <option>大地影院</option>
+                                                <option>保利影城</option>
+                                                <option>万达影城</option>
+                                                <option>劲松电影院</option>
+                                                <option>十里河影院</option>
+                                            </select>
+                                            <select class="form-control col-sm-6">
+                                                <option>放映厅 1</option>
+                                                <option>放映厅 2</option>
+                                                <option>放映厅 3</option>
+                                                <option>放映厅 4</option>
+                                                <option>放映厅 5</option>
+                                            </select>
+                                        </div>
                                     </div>
                                     <h3 class="card-title">
-                                        <!--                                    <i class="fa fa-pie-chart mr-1"></i>-->
                                         银幕亮度
                                     </h3>
                                     <a href="javascript:void(0);"></a>
-                                    <!--                                    <ul class="nav nav-pills ml-auto p-2">-->
-                                    <!--                                        <li class="nav-item">-->
-                                    <!--                                            <a class="nav-link active" href="#revenue-chart" data-toggle="tab">年份</a>-->
-                                    <!--                                        </li>-->
-                                    <!--                                        <li class="nav-item">-->
-                                    <!--                                            <a class="nav-link" href="#sales-chart" data-toggle="tab">总量</a>-->
-                                    <!--                                        </li>-->
-                                    <!--                                    </ul>-->
                                 </div>
                             </div><!-- /.card-header -->
                             <div class="card-body">
@@ -644,13 +684,22 @@
                             <div class="card-header no-border">
                                 <div class="d-flex justify-content-between">
                                     <div class="form-group">
-                                        <select class="form-control">
-                                            <option>放映厅 1</option>
-                                            <option>放映厅 2</option>
-                                            <option>放映厅 3</option>
-                                            <option>放映厅 4</option>
-                                            <option>放映厅 5</option>
-                                        </select>
+                                        <div class="row">
+                                            <select class="form-control col-sm-6">
+                                                <option>大地影院</option>
+                                                <option>保利影城</option>
+                                                <option>万达影城</option>
+                                                <option>劲松电影院</option>
+                                                <option>十里河影院</option>
+                                            </select>
+                                            <select class="form-control col-sm-6">
+                                                <option>放映厅 1</option>
+                                                <option>放映厅 2</option>
+                                                <option>放映厅 3</option>
+                                                <option>放映厅 4</option>
+                                                <option>放映厅 5</option>
+                                            </select>
+                                        </div>
                                     </div>
                                     <h3 class="card-title">
                                         <!--                                        <i class="fa fa-th mr-1"></i>-->
@@ -865,6 +914,7 @@
             type: 'map',
             mapType: 'china',
             roam: true,
+            // radius: '80%',
             label: {
                 normal: {
                     show: false  //省份名称
@@ -879,6 +929,51 @@
 
     // 使用刚指定的配置项和数据显示图表。
     myChart.setOption(option);
+</script>
+<script>
+    var pieChart = echarts.init(document.getElementById("piechart"));
+
+    var option = {
+        title : {
+            text: '设备品牌统计',
+            x:'center'
+        },
+        tooltip : {
+            trigger: 'item',
+            formatter: "{a} <br/>{b} : {c} ({d}%)"
+        },
+        legend: {
+            orient: 'vertical',
+            left: 'left',
+            data: ['华为','惠普','联想','索尼','尼康','巴可','科视']
+        },
+        series : [
+            {
+                name: '访问来源',
+                type: 'pie',
+                radius : '55%',
+                center: ['50%', '60%'],
+                data:[
+                    {value:335, name:'华为'},
+                    {value:310, name:'惠普'},
+                    {value:234, name:'联想'},
+                    {value:135, name:'索尼'},
+                    {value:1548, name:'尼康'},
+                    {value:123, name:'巴可'},
+                    {value:456, name:'科视'}
+                ],
+                itemStyle: {
+                    emphasis: {
+                        shadowBlur: 10,
+                        shadowOffsetX: 0,
+                        shadowColor: 'rgba(0, 0, 0, 0.5)'
+                    }
+                }
+            }
+        ]
+    };
+
+    pieChart.setOption(option);
 </script>
 </body>
 </html>
