--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -166,7 +166,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="/system/blank_api" class="nav-link">
+            <a href="/blank" class="nav-link">
                 <i class="nav-icon fa fa-table"></i>
                 <p>
                     影院星级评定
