add equipment details page

--- a/src/main/resources/templates/assets/details_room.html
+++ b/src/main/resources/templates/assets/details_room.html
@@ -305,7 +305,7 @@
                       <td>2018/6/24</td>
 					  <td>1 号厅</td>
                       <td>-</td>
-					  <th><a href="">>>详情</a></th>
+					  <th><a href="/assets/equipment_details">>>详情</a></th>
 
                     </tr>
 					<tr>
