--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -200,7 +200,7 @@
                 <td th:text="${cinema.responsiblePhone}">140000</td>
                 <td th:text="${cinema.manager}">ac</td>
                 <td th:text="${cinema.managerPhone}">dfjlsd</td>
-                <th><a href="/details">详情</a></th>
+                <th><a href="/base/equipment/details">详情</a></th>
               </tr>
               <tr>
                 <td >23543</td>
@@ -210,7 +210,7 @@
                 <td >T</td>
                 <td >HARMAN</td>
                 <td >14-00-00-08-38-95</td>
-                <th><a href="/details">详情</a></th>
+                <th><a href="/base/equipment/details">详情</a></th>
               </tr>
               <tr>
                 <td >23892</td>
@@ -220,7 +220,7 @@
                 <td >存储系列</td>
                 <td >SLM</td>
                 <td >14-00-00-08-38-95</td>
-                <th><a href="/details">详情</a></th>
+                <th><a href="/base/equipment/details">详情</a></th>
               </tr>
               <tr>
                 <td >23356</td>
@@ -230,7 +230,7 @@
                 <td >计算系列</td>
                 <td >HP_LL</td>
                 <td >14-00-00-08-38-95</td>
-                <th><a href="/details">详情</a></th>
+                <th><a href="/base/equipment/details">详情</a></th>
               </tr>
               </tbody>
             </table>
