modified the course front page

--- a/src/main/resources/templates/course/online_course.html
+++ b/src/main/resources/templates/course/online_course.html
@@ -130,9 +130,10 @@
             <div class="card-body">
               <div class="row form-group col-12">
                 <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
-                    <div style="padding-left:40px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/abc.png}" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
+                    <div style="padding-left:10px; padding-top:10px;">
+
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/video_details.png}" style="height:200px;width:auto ;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">电影放映机安装及使用方法视频</p>
                     <div class="form-group row">
@@ -146,10 +147,10 @@
                   </div>
                 </div>
                 <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
+                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:40px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/abc.png}" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                    <div style="padding-left:10px; padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/video_details.png}" style="height:200px;width:auto ;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">测试方法视频</p>
                     <div class="form-group row">
@@ -163,10 +164,10 @@
                   </div>
                 </div>
                 <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
+                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:40px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/abc.png}" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                    <div style="padding-left:10px; padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/video_details.png}" style="height:200px;width:auto ;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">索尼电影放映机使用及注意事项视频</p>
                     <div class="form-group row">
@@ -180,10 +181,10 @@
                   </div>
                 </div>
                 <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 440px;width: 100%;">
+                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
 
-                    <div style="padding-left:40px; padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/abc.png}" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
+                    <div style="padding-left:10px; padding-top:10px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/video_details.png}" style="height:200px;width:auto ;">
                     </div>
                     <p style="padding-left: 10px; padding-right: 10px;">配置方法视频</p>
                     <div class="form-group row">
