--- a/src/main/resources/templates/ai/direction_chat.html
+++ b/src/main/resources/templates/ai/direction_chat.html
@@ -105,7 +105,7 @@
                     <img th:src="@{/dist/img/user1-128x128.jpg}" alt="Product 1" class="img-circle img-size-32 mr-2">
                   </td>
                   <td>小钱</td>
-                  <td><span class="badge bg-danger">未处理</span></td>
+                  <td><span class="badge bg-warning">已查看</span></td>
                 </tr>
                 <tr>
                   <td>
